# TerrainGenerator

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  CMakeSettings.json  Camera.hpp  Chunk.hpp  LICENSE  README.md  Shader.cpp  Shader.hpp  Terrain.hpp  Window.cpp  Window.hpp  glad.c  imgui.ini  main.cpp
resources/include/glad/: glad.h
resources/lib/: glfw3.lib  noise.lib
shaders/skybox/: skybox.fs  skybox.vs
shaders/terrain/: terrain.fs  terrain.vs
shaders/water/: water.fs  water.vs
src/: main.cpp
src/Application/: App.cpp  App.hpp
src/Engine/: Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  Water.cpp  Water.hpp  Window.cpp  Window.hpp
